# tbert

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  FindTCL.cmake  Makefile  example.out  example.tcl  library.cc  library.h  neo-2023-07-24.bert_cpp.patch  neo-2023-07-25.bert_cpp.patch  pkgIndex.tcl  pkgIndex.tcl.in  readme.md
doc/: semantic-search-with-tbert.md
